--- a/create/main2.html
+++ b/create/main2.html
@@ -21,16 +21,44 @@
         <div class="main">
             <div class="main-container">
                 <div class="tab-content home-control show">
-                    This is home                    
+                    <div class="content">
+                        This is home
+                    </div>       
+                    <div class="not-logged-in show">
+                        Please login to use these features
+                    </div>             
                 </div>
                 <div class="tab-content quiz-control">
-                    This is quiz
+                    <button class="invert-btn" id="quiz">Invert</button>
+                    <div class="content">
+                        <div class="quiz-result result">
+                            This is quiz result
+                        </div>
+                        <div class="quiz-create create show">
+                            This is quiz create
+                        </div>
+                    </div>       
+                    <div class="not-logged-in show">
+                        Please login to use these features
+                    </div> 
                 </div>
                 <div class="tab-content poll-control">
-                    This is poll
+                    <button class="invert-btn">Invert</button>
+                    <div class="content">
+                        This is poll
+                    </div>       
+                    <div class="not-logged-in show">
+                        Please login to use these features
+                    </div> 
                 </div>
                 <div class="tab-content feedback-control">
-                    This is feedback
+                    <button class="invert-btn">Invert</button>
+                    <div class="content">
+                        This is feedback
+                    </div>       
+                    <div class="not-logged-in show">
+                        Please login to use these features
+                    </div> 
                 </div>
                 <div class="user-login tab-content">
                     <div class="user-login-container">
