adding inverting to all pages

--- a/create/main2.html
+++ b/create/main2.html
@@ -43,18 +43,28 @@
                     </div> 
                 </div>
                 <div class="tab-content poll-control">
-                    <button class="invert-btn">Invert</button>
+                    <button class="invert-btn" id="poll">Invert</button>
                     <div class="content">
-                        This is poll
+                        <div class="poll-result result">
+                            This is poll result
+                        </div>
+                        <div class="poll-create create show">
+                            This is poll create
+                        </div>
                     </div>       
                     <div class="not-logged-in show">
                         Please login to use these features
                     </div> 
                 </div>
                 <div class="tab-content feedback-control">
-                    <button class="invert-btn">Invert</button>
+                    <button class="invert-btn" id="feedback">Invert</button>
                     <div class="content">
-                        This is feedback
+                        <div class="feedback-result result">
+                            This is feedback result
+                        </div>
+                        <div class="feedback-create create show">
+                            This is feedback create
+                        </div>
                     </div>       
                     <div class="not-logged-in show">
                         Please login to use these features
