--- a/create/main2.html
+++ b/create/main2.html
@@ -67,6 +67,9 @@
                     <div class="content">
                         <div class="quiz-result result">
                             This is quiz result
+                            <button id="nxtq">
+                                next question
+                            </button>
                             <button class="invert-btn quiz">Invert Quiz</button>
                         </div>
                         <div class="quiz-create create show-select">
@@ -207,6 +210,8 @@
             </div>
         </div>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+
     <script src="./js/main2.js"></script>
 </body>
 
