so many changes to make the quiz work

--- a/create/main2.html
+++ b/create/main2.html
@@ -80,7 +80,9 @@
                 <div class="tab-content quiz-control">
                     <div class="content">
                         <div class="quiz-result result">
-                            This is quiz result
+                            <div class="quiz-details">
+                                
+                            </div>
                             <button id="nxtq">
                                 next question
                             </button>
@@ -150,7 +152,7 @@
                                 </div>
                                 <div class="quiz-actions">
                                     <button id="add_question_btn" class="main-button quiz">+ Add Question</button>
-                                    <button class="invert-btn quiz main-button" id="publish_quiz">Publish Quiz</button>
+                                    <button class="invert-btn quiz main-button publish-btn" id="publish_quiz">Publish Quiz</button>
                                 </div>
                             </form>
                         </div>
@@ -226,7 +228,7 @@
                                 </div>
                                 <div class="poll-actions">
                                     <button id="add_poll_btn" class="main-button poll">+ Add Poll</button>
-                                    <button class="invert-btn poll main-button" id="publish_poll">Publish Poll</button>
+                                    <button class="invert-btn poll main-button publish-btn" id="publish_poll">Publish Poll</button>
                                 </div>
                             </form>
                         </div>
@@ -266,7 +268,7 @@
                                 </div>
                                 <div class="feedback-actions">
                                     <button id="add_feedback_btn" class="main-button feedback">+ Add Question</button>
-                                    <button class="invert-btn feedback main-button" id="publish_feedback">Publish
+                                    <button class="invert-btn feedback main-button publish-btn" id="publish_feedback">Publish
                                         Feedback</button>
                                 </div>
                             </form>
