--- a/participate/action.html
+++ b/participate/action.html
@@ -61,7 +61,7 @@
                 method: 'GET',
                 redirect: 'follow'
             };
-
+            console.log(theQuestionId)
             fetch("https://mighty-sea-62531.herokuapp.com/api/questions/nextQuestion/"+actionId+"/"+theQuestionId, requestOptions)
                 .then(response => response.json())
                 .then(result => {console.log(result); theQuestionId = result["_id"]; theQuestion = result; renderQuiz(theQuestion);})
@@ -95,6 +95,14 @@
                     fetchNextQuestion();
                 }
             })
+            socket.on('all options', (new_data) => {
+                console.log(new_data)
+                for (let k of options) {
+                    if (new_data._id == k._id) {
+                        k.stat = new_data.stat;
+                    }
+                }
+            })
         }
 
         //Handling the answers
@@ -105,14 +113,6 @@
                 }
             }
             socket.emit("option", data);
-            socket.on('all options', (new_data) => {
-                console.log(new_data)
-                for (let k of options) {
-                    if (new_data._id == k._id) {
-                        k.stat = new_data.stat;
-                    }
-                }
-            })
         }
 
 
@@ -153,11 +153,14 @@
                 ele["options"].forEach(elem => {
                     options.push(elem);
                 })
+                if(ele["isOpen"] == true){
+                    theQuestion = ele;
+                }
             });
-            theQuestion = questions[0];
-            renderQuiz(theQuestion);
-            theQuestionId = questions[0]["_id"];
+            console.log(theQuestion)
+            theQuestionId = theQuestion["_id"];
             socketConnection();
+            renderQuiz(theQuestion);
         }
 
 
