--- a/create/main2.html
+++ b/create/main2.html
@@ -80,13 +80,15 @@
                 <div class="tab-content quiz-control">
                     <div class="content">
                         <div class="quiz-result result">
-                            <div class="quiz-details">
-                                
+                            <button class="invert-btn quiz back-btn"><img src="../img/back.png" alt=""></button>
+                            <canvas class="quiz-details" >
+
+                            </canvas>
+                            <div class="quiz-result-buttons">
+                                <button id="nxtq" class="main-button">Next Question</button>
+                                <button id="close_quiz" class="main-button">Close Quiz</button>
                             </div>
-                            <button id="nxtq">
-                                next question
-                            </button>
-                            <button class="invert-btn quiz">Invert Quiz</button>
+                            
                         </div>
                         <div class="quiz-create create show-select">
                             <form action="" method="post" class="quiz-create-container" id="question_form">
@@ -301,6 +303,7 @@
         </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
     <script>
         if (window.innerWidth < 600) {
             const main = document.querySelector("main");
